--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -26,12 +26,12 @@ clean-targets:         # directories to be removed by `dbt clean`
 
 # Configuring models
 # Full documentation: https://docs.getdbt.com/docs/configuring-models
-
-# In this example config, we tell dbt to build all models in the example/
-# directory as views. These settings can be overridden in the individual model
-# files using the `{{ config(...) }}` macro.
 models:
   keboola_northwind:
-    # Config indicated by + and applies to all files under models/example/
-    example:
-      +materialized: view
+    staging:
+      materialized: view
+    warehouse:
+      materialized: table
+    analytics_obt:
+      materialized: table
+    
