query tags added

--- a/models/_sources/in.c-northwind_dataset.yml
+++ b/models/_sources/in.c-northwind_dataset.yml
@@ -57,9 +57,11 @@ sources:
           columns:
             - name: '"EMPLOYEE_ID"'
               tests:
+                - unique
                 - not_null
             - name: '"TERRITORY_ID"'
               tests:
+                - unique
                 - not_null
         - name: ORDERS
           quoting:
