--- a/profiles.yml
+++ b/profiles.yml
@@ -10,4 +10,5 @@ keboola_northwind:
             type: '{{ env_var("DBT_KBC_KEBOOLA_NORTHWIND_TYPE") }}'
             user: '{{ env_var("DBT_KBC_KEBOOLA_NORTHWIND_USER") }}'
             warehouse: '{{ env_var("DBT_KBC_KEBOOLA_NORTHWIND_WAREHOUSE") }}'
+            query_tag: 'keboola dbt'
             threads: 4
